# nornir_gitlab

./: Makefile  README.md  pyproject.toml
tests/unit/: test_gitlab.py
